tests, backend fixes